--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora IMC</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Calculadora de masa corporal</h1>
@@ -16,9 +17,9 @@
     </form>
 
     <br><br>
-
-    <img src="img/imc.jpg" alt="Tabla altura/peso de masa corporal">
-
+    <div class="container">
+        <img src="img/imc.jpg" alt="Tabla altura/peso de masa corporal">
+    </div>
 
     <script src="calculadora.js"></script>
 </body>
